--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -89,6 +89,10 @@
     padding-inline: 1.5rem;
   }
 
+  .section__content-tests{
+    padding-inline: 1.5rem;
+  }
+
   .footer__nav__list{
     display: grid;
     grid-template-columns: repeat(2,15rem);
@@ -185,7 +189,7 @@
     border-width: 1px;
     border-radius: 2rem;
     justify-self: center;
-    
+    margin-top: 3px;
   }
 
 
@@ -425,7 +429,116 @@
   .section__subtitle{
     font-size: var(--normal-font-size);
   }
+
+  .selection__process-grid{
+    display: grid;
+    grid-template-columns: 700px 1fr;
+    column-gap: 10px;
+   
+  }
+
+  .section__title.empresas, .section__subtitle.empresas{
+    width: 100%;
+    text-align: left;
+  }
+
+  .section__title.empresas{
+    margin-bottom: 7px;
+  }
+
+  .section__subtitle.empresas{
+    line-height: 1.7rem;
+    width: 82%;
+  }
+
+  .selection__process-info{
+    padding-block: 1.5rem;
+    padding-inline: 1.5rem;
+    row-gap: 20px;
+  }
+
+  .selection__process-item > span{
+    font-size: var(--font-title);
+  }
+
+  .image__container {
+    width: 100%;
+    height: 80%;
+    position: relative;
+    top: 180px;
+    left: -100px;
+  }
+
+  .item__icon {
+    width: 60px;
+    height: 60px;
+  }
+
+  .selection__process-image {
+    max-width: 100%; 
+    border-radius: 20px;  
+  }
+
   
+  .image-back {
+    width: 490px;
+    height: 320px;
+    object-fit: cover;
+    position: absolute;
+    left: 0;
+    z-index: 1; 
+  }
+  
+  .image-front {
+    width: 400px;
+    height: 450px;
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
+    right: -50px;
+    top: 18px;
+    z-index: 2; 
+  }
+
+
+  /* medical tests section */
+
+  .medical__tests-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "image text";
+    align-items: center;
+    column-gap: 90px;
+    padding-block: 20px;
+  }
+
+  .medical__tests-info {
+    grid-area: text;
+  }
+
+  .medical__tests-image {
+    grid-area: image;
+    width: 100%;
+  }
+  
+  
+  .medical__tests-image > img{
+    border-radius: 20px;
+    width: 500px;
+    height: 520px;
+    max-width: 100%;
+    object-fit: cover;
+  }
+
+  .medical__tests-image{
+    text-align: end;
+  }
+
+  .section__content-tests{
+    text-align: left;
+    margin-inline: 1.5rem;
+  }
+
   .review__text{
     font-size: 3rem;
     line-height: 3.5rem;
@@ -463,7 +576,7 @@
   }
 
   .footer{
-    padding-top: 5rem;
+    padding-top: 4rem;
   }
 
   .footer__nav__list{
@@ -473,11 +586,16 @@
 
   .footer__rights{
     font-size: 0.75rem;
-    margin-top: 3.75rem;
+    margin-top: 1rem;
   }
 
   .footer__nav__list > .nav__link{
     font-size: var(--normal-font-size);
+  }
+
+  .footer__section{
+    padding-top: 4rem;
+    padding-bottom: 1.5rem;
   }
 
 
